[gd_scene load_steps=7 format=2]

[ext_resource path="res://Interactives/Farm.gd" type="Script" id=1]
[ext_resource path="res://UI/mainfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Interactives/farm.png" type="Texture" id=3]
[ext_resource path="res://Interactives/progress_bar.png" type="Texture" id=4]
[ext_resource path="res://Interactives/progress_under.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 40 )

[node name="Farm" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )
path_to_progress_bar = NodePath("VBoxContainer/CenterContainer/TextureProgress")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 40.0
use_top_left = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="VBoxContainer/CenterContainer"]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
value = 100.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
fill_mode = 4
tint_progress = Color( 0.25098, 1, 0.25098, 1 )

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 40.0
margin_bottom = 25.0
use_top_left = true

[node name="CoolDownLabel" type="Label" parent="VBoxContainer/CenterContainer2"]
margin_left = -9.0
margin_top = -13.0
margin_right = 8.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 2 )
text = "99"

[node name="CoolDown" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[connection signal="timeout" from="CoolDown" to="." method="_on_CoolDown_timeout"]
